shortcuts for kitty and minikube variable

--- a/kitty.conf
+++ b/kitty.conf
@@ -6,3 +6,10 @@ map f2 new_tab
 map f3 previous_tab
 map f4 next_tab
 
+map ctrl+f3 move_tab_backward
+map ctrl+f4 move_tab_forward
+
+map super+equal      increase_font_size
+map super+minus      decrease_font_size
+map super+0          restore_font_size
+
