colors and newline

--- a/kitty.conf
+++ b/kitty.conf
@@ -2,6 +2,27 @@ font_family Fira Code
 
 shell /usr/bin/fish
 
+# tabs
+tab_bar_edge top
+tab_bar_style separator
+tab_separator " | "
+
+# terminal
+scrollback_lines 100000
+font_size 13.0
+
+# colors
+foreground       #839496
+background       #002b36
+selection_foreground #93a1a1
+selection_background #073642
+cursor           #ffffff
+cursor_opacity   0.7
+cursor_shape     block
+cursor_blink_interval     0.5
+cursor_stop_blinking_after 15.0
+
+# keyboard maps
 map f2 new_tab
 map f3 previous_tab
 map f4 next_tab
