opacity and init vim

--- a/kitty.conf
+++ b/kitty.conf
@@ -22,6 +22,9 @@ cursor_shape     block
 cursor_blink_interval     0.5
 cursor_stop_blinking_after 15.0
 
+background_opacity         0.9
+dynamic_background_opacity no
+
 # keyboard maps
 map f2 new_tab
 map f3 previous_tab
