--- a/kitty.conf
+++ b/kitty.conf
@@ -14,8 +14,8 @@ font_size 13.0
 # colors
 foreground       #839496
 background       #002b36
-selection_foreground #93a1a1
-selection_background #073642
+selection_foreground #002b36
+selection_background #839496
 cursor           #ffffff
 cursor_opacity   0.7
 cursor_shape     block
