--- a/kitty.conf
+++ b/kitty.conf
@@ -26,7 +26,7 @@ background_opacity         0.9
 dynamic_background_opacity no
 
 # keyboard maps
-map f2 new_tab
+map f2 new_tab_with_cwd
 map f3 previous_tab
 map f4 next_tab
 
