--- a/kitty.conf
+++ b/kitty.conf
@@ -3,13 +3,14 @@ font_family Fira Code
 shell /usr/local/bin/fish
 
 # tabs
-tab_bar_edge top
+tab_bar_edge bottom
 tab_bar_style separator
 tab_separator " | "
 
 # terminal
 scrollback_lines 100000
 font_size 13.0
+font_family Fira Code
 
 # colors
 foreground       #839496
