--- a/kitty.conf
+++ b/kitty.conf
@@ -30,6 +30,7 @@ dynamic_background_opacity no
 map f2 new_tab_with_cwd
 map f3 previous_tab
 map f4 next_tab
+map ctrl+f5 close_tab
 
 map ctrl+f3 move_tab_backward
 map ctrl+f4 move_tab_forward
@@ -37,4 +38,18 @@ map ctrl+f4 move_tab_forward
 map super+equal      increase_font_size
 map super+minus      decrease_font_size
 map super+0          restore_font_size
+
+map ctrl+shift+up scroll_line_up
+map ctrl+shift+k scroll_line_up
+map cmd+up scroll_line_up
+
+map ctrl+shift+down scroll_line_down
+map ctrl+shift+j scroll_line_down
+map cmd+down scroll_line_down
+
+map ctrl+shift+page_up scroll_page_up
+map cmd+page_up scroll_page_up
+
+map ctrl+shift+page_down scroll_page_down
+map cmd+page_down scroll_page_down
 
