--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,6 @@
 font_family Fira Code
 
-shell /usr/local/bin/fish
+shell /usr/bin/fish
 
 # tabs
 tab_bar_edge bottom
@@ -8,8 +8,8 @@ tab_bar_style separator
 tab_separator " | "
 
 # terminal
-scrollback_lines 100000
-font_size 13.0
+scrollback_lines 1000000
+font_size 10.0
 font_family Fira Code
 
 # colors
@@ -23,8 +23,12 @@ cursor_shape     block
 cursor_blink_interval     0.5
 cursor_stop_blinking_after 15.0
 
-background_opacity         0.9
+background_opacity         0.95
 dynamic_background_opacity no
+
+remember_window_size yes
+draw_minimal_borders yes
+hide_window_decorations no
 
 # keyboard maps
 map f2 new_tab_with_cwd
