blokada i inne takie

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -53,8 +53,10 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 exec-once = $terminal
 exec-once = nm-applet &
 #exec-once = waybar & hyprpaper & firefox
-exec-once = waybar
-exec-once = slack & signal & brave & discord
+exec-once = waybar & wpaperd & swaync
+exec-once = if [ "uname -n" == "michal-82k2" ]; then slack & signal-desktop --use-tray-icon & brave & discord; fi
+#exec-once =  slack & signal-desktop --use-tray-icon & brave & discord
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -192,9 +194,11 @@ gestures {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+bind = $mainMod, L, exec, hyprlock
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, T, exec, $terminal
+bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -250,7 +254,8 @@ bind = $mainMod, ins, exec, "dbus-send --system --print-reply --dest=org.bluez /
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-
+bind = $shiftMod, PRINT, exec, hyprshot -z -m region
+bind = , PRINT, exec, hyprshot -z -m output
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
