--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -4,9 +4,9 @@
     "position": "top",
     "height": 34,
     "spacing": 5,
-    "modules-left": ["hyprland/workspaces"],
+    "modules-left": ["cpu", "memory", "temperature", "hyprland/workspaces"],
     "modules-center": ["hyprland/window"],
-    "modules-right": ["pulseaudio", "keyboard-state", "cpu", "memory", "temperature", "battery", "tray", "clock"],
+    "modules-right": ["pulseaudio", "keyboard-state", "battery", "custom/notification", "tray", "clock"],
     // Modules configuration
     "hyprland/workspaces": {
         "disable-scroll": true,
@@ -44,7 +44,7 @@
     },
     "clock": {
 	"inverval": 1,
-        "format": "{:%Y-%m-%d %H:%M:%S}",
+        "format": "{:%a %d-%m-%Y %H:%M:%S}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
     },
     "cpu": {
@@ -61,7 +61,6 @@
     },
     "battery": {
         "states": {
-            // "good": 95,
             "warning": 30,
             "critical": 15
         },
@@ -69,11 +68,10 @@
         "format-charging": "{capacity}% 🗲",
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
         "format-icons": ["", "", "", "", ""]
     },
     "pulseaudio": {
+	"scroll-step": 1,
         "format": "{volume}%{icon} {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
@@ -90,26 +88,26 @@
             "default": ["", "", ""]
         },
         "on-click": "pavucontrol"
-    //},
-    //"custom/notification": {
-    //    "tooltip": false,
-    //    "format": "{} {icon}",
-    //    "format-icons": {
-    //        "notification": "<span foreground='red'><sup></sup></span> ",
-    //        "none": "",
-    //        "dnd-notification": "<span foreground='red'><sup></sup></span> ",
-    //        "dnd-none": "",
-    //        "inhibited-notification": "<span foreground='red'><sup></sup></span> ",
-    //        "inhibited-none": "",
-    //        "dnd-inhibited-notification": "<span foreground='red'><sup></sup></span> ",
-    //        "dnd-inhibited-none": ""
-    //    },
-    //    "return-type": "json",
-    //    "exec-if": "which swaync-client",
-    //    "exec": "swaync-client -swb",
-    //    "on-click": "sleep 0.1 && swaync-client -t -sw",
-    //    "on-click-right": "swaync-client -d -sw",
-    //    "escape": true
+    },
+    "custom/notification": {
+        "tooltip": false,
+        "format": "{} {icon}",
+        "format-icons": {
+            "notification": "<span foreground='red'><sup></sup></span> ",
+            "none": "",
+            "dnd-notification": "<span foreground='red'><sup></sup></span> ",
+            "dnd-none": "",
+            "inhibited-notification": "<span foreground='red'><sup></sup></span> ",
+            "inhibited-none": "",
+            "dnd-inhibited-notification": "<span foreground='red'><sup></sup></span> ",
+            "dnd-inhibited-none": ""
+        },
+        "return-type": "json",
+        "exec-if": "which swaync-client",
+        "exec": "swaync-client -swb",
+        "on-click": "sleep 0.1 && swaync-client -t -sw",
+        "on-click-right": "swaync-client -d -sw",
+        "escape": true
     }
 }
 
