--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,9 +22,9 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1
-#monitor=eDP-1,1920x1080,1920x0,1
+monitor=,preferred,0x0,1
 monitor=HDMI-A-1,1920x1080,-1920x0,1
+monitor=DP-1,preferred,0x-1080,1
 
 ###################
 ### MY PROGRAMS ###
@@ -37,27 +37,6 @@ $terminal = kitty
 $fileManager = nautilus
 $menu = wofi --show drun
 
-
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-#exec = gsettings set org.gnome.desktop.interface gtk-theme "YOUR_DARK_GTK3_THEME"   # for GTK3 apps
-exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
-
-env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
-
-exec-once = $terminal
-exec-once = nm-applet &
-#exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & wpaperd & swaync
-exec-once = if [ "uname -n" == "michal-82k2" ]; then slack & signal-desktop --use-tray-icon & brave & discord; fi
-#exec-once =  slack & signal-desktop --use-tray-icon & brave & discord
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -67,6 +46,26 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 env = XCURSOR_SIZE,16
 env = HYPRCURSOR_SIZE,16
 
+#################
+### AUTOSTART ###
+#################
+
+# sudo in windowed apps :V
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+# plugins reload
+# not working for now :(
+# exec-once = hyprpm reload -n
+
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark"   # for GTK3 apps
+exec = gsettings set org.gnome.desktop.interface color-scheme "Adwaita-dark"   # for GTK4 apps
+
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
+
+#exec-once = $terminal
+#exec-once = nm-applet &
+exec-once = waybar & wpaperd & swaync
+exec-once = if [ "uname -n" == "michal-82k2" ]; then slack & signal-desktop --use-tray-icon & brave & discord; fi
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 #####################
 ### LOOK AND FEEL ###
@@ -96,7 +95,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 5
+    rounding = 10
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -166,6 +165,8 @@ input {
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+
+    natural_scroll = true
 
     touchpad {
         natural_scroll = true
@@ -253,6 +254,21 @@ bind = $mainMod, ins, exec, "dbus-send --system --print-reply --dest=org.bluez /
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Screen brightness
+bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
+bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+#bind = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/backlight --inc 
+#bind = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/backlight --dec
+
+# Volume
+#bind = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume --inc 
+bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
+#bind = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume --dec 
+bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
+bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/volume --toggle-mic 
+bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume --toggle
+
 
 bind = $shiftMod, PRINT, exec, hyprshot -z -m region
 bind = , PRINT, exec, hyprshot -z -m output
