--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,51 +1,50 @@
 // -*- mode: jsonc -*-
 {
-    "layer": "top",
-    "position": "top",
-    "height": 34,
-    "spacing": 5,
-    "modules-left": ["cpu", "memory", "temperature", "hyprland/workspaces"],
-    "modules-center": ["hyprland/window"],
-    "modules-right": ["pulseaudio", "keyboard-state", "battery", "custom/notification", "tray", "clock"],
-    // Modules configuration
-    "hyprland/workspaces": {
-        "disable-scroll": true,
-        "on-click": "activate",
-        "format": "{name}",
-        "on-scroll-up": "hyprctl dispatch workspace m-1 > /dev/null",
-        "on-scroll-down": "hyprctl dispatch workspace m+1 > /dev/null",
-        "format-icons": {
-            "1": "",
-            "2": "",
-            "3": "",
-            "4": "",
-            "5": "",
-            "urgent": "",
-            "focused": "",
-            "default": ""
-        }
+    "height": 24, // Waybar height (to be removed for auto height)
+    "spacing": 4, // Gaps between modules (4px)
+    // Choose the order of the modules
+    "modules-left": [
+	"cpu",
+	"memory",
+	"temperature",
+	"hyprland/workspaces"
+    ],
+    "modules-center": [
+	"hyprland/window"
+    ],
+    "modules-right": [
+	"custom/uptime",
+        "pulseaudio",
+        "network",
+        "keyboard-state",
+        "battery",
+        "clock",
+        "tray",
+	"custom/notification",
+        "custom/power"
+    ],
+    "custom/uptime": {
+	"format": "up: {}",
+	"exec": "awk '{printf(\"%d:%02d:%02d\\n\",($1/60/60%24),($1/60%60),($1%60))}' /proc/uptime",
+	"interval": 1
     },
     "keyboard-state": {
-        "numlock": false,
-        "capslock": false,
+        "numlock": true,
+        "capslock": true,
         "format": "{name} {icon}",
         "format-icons": {
             "locked": "",
             "unlocked": ""
         }
     },
-    "hyprland/window": {
-        "max-length": 50,
-        "separate-outputs": true
-    },
     "tray": {
         // "icon-size": 21,
-        "spacing": 0
+        "spacing": 10
     },
     "clock": {
-	"inverval": 1,
-        "format": "{:%a %d-%m-%Y %H:%M:%S}",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
+	"interval": 1,
+	"format": "{:%a %d-%m-%Y %H:%M:%S}",
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
     },
     "cpu": {
         "format": "{usage}% ",
@@ -57,37 +56,69 @@
     "temperature": {
         "critical-threshold": 70,
         "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
+        "format-icons": ["", "", ""]
     },
     "battery": {
         "states": {
+            // "good": 95,
             "warning": 30,
             "critical": 15
         },
         "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% 🗲",
+        "format-full": "{capacity}% {icon}",
+        "format-charging": "{capacity}% ",
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
         "format-icons": ["", "", "", "", ""]
     },
+    "network": {
+        "format-wifi": "{signalStrength}% ",
+        "format-ethernet": "{ipaddr}/{cidr} ",
+        "tooltip-format": "{ifname} via {gwaddr} ",
+        "format-linked": "{ifname} (No IP) ",
+        "format-disconnected": "Disconnected ⚠",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+    },
     "pulseaudio": {
-	"scroll-step": 1,
-        "format": "{volume}%{icon} {format_source}",
+        "scroll-step": 1, // %, can be a float
+        "format": "{volume}% {icon} {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
         "format-muted": " {format_source}",
         "format-source": "{volume}% ",
         "format-source-muted": "",
         "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
+            "headphone": "",
+            "hands-free": "",
+            "headset": "",
             "phone": "",
             "portable": "",
             "car": "",
-            "default": ["", "", ""]
+            "default": ["", "", ""]
         },
         "on-click": "pavucontrol"
+    },
+    "custom/power": {
+        "format" : "⏻ ",
+		"tooltip": false,
+		"menu": "on-click",
+		"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
+		"menu-actions": {
+			"shutdown": "shutdown",
+			"reboot": "reboot",
+			"suspend": "systemctl suspend",
+			"hibernate": "systemctl hibernate"
+		}
+    },
+    "hyprland/workspaces": {
+	"persistent-workspaces": {
+	    "eDP-1": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ],
+	    "DP-1": [ 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
+	}
+    },
+    "hyprland/window": {
+        "icon": true,
+	"format": "{title}"
     },
     "custom/notification": {
         "tooltip": false,
@@ -110,4 +141,3 @@
         "escape": true
     }
 }
-
