theme, window name itp

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -112,13 +112,14 @@
     },
     "hyprland/workspaces": {
 	"persistent-workspaces": {
-	    "eDP-1": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ],
-	    "DP-1": [ 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
+	    // "eDP-1": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ],
+	    // "DP-1": [ 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
 	}
     },
     "hyprland/window": {
         "icon": true,
-	"format": "{title}"
+	"format": "{title}",
+	"separate-outputs": true
     },
     "custom/notification": {
         "tooltip": false,
