--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -45,6 +45,7 @@ $menu = wofi --show drun
 
 env = XCURSOR_SIZE,16
 env = HYPRCURSOR_SIZE,16
+env = GTK_THEME,Adwaita-dark
 
 #################
 ### AUTOSTART ###
@@ -64,7 +65,8 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 #exec-once = $terminal
 #exec-once = nm-applet &
 exec-once = waybar & wpaperd & swaync
-exec-once = if [ "uname -n" == "michal-82k2" ]; then slack & signal-desktop --use-tray-icon & brave & discord; fi
+exec-once = jetbrains-toolbox --minimized
+exec-once = if [ "$(uname -n)" == "michal-82k2" ]; then slack & signal-desktop --use-tray-icon & brave & discord; fi
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 #####################
