--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,144 +1,43 @@
 // -*- mode: jsonc -*-
+[{
+	"layer": "top",
+	"position": "top",
+	"output": ["eDP-1"],
+	"include": [
+		"~/.config/waybar/bar.jsonc",
+	],    
+	"modules-left": [
+		"cpu",
+		"memory",
+		"temperature",
+		"hyprland/workspaces"
+	],
+	"modules-center": [
+		"hyprland/window"
+	],
+	"modules-right": [
+		"custom/uptime",
+        	"pulseaudio",
+        	"network",
+        	"keyboard-state",
+        	"battery",
+        	"clock",
+        	"tray",
+		"custom/notification",
+        	"custom/power"
+	]
+},
 {
-    "height": 24, // Waybar height (to be removed for auto height)
-    "spacing": 4, // Gaps between modules (4px)
-    // Choose the order of the modules
-    "modules-left": [
-	"cpu",
-	"memory",
-	"temperature",
-	"hyprland/workspaces"
-    ],
-    "modules-center": [
-	"hyprland/window"
-    ],
-    "modules-right": [
-	"custom/uptime",
-        "pulseaudio",
-        "network",
-        "keyboard-state",
-        "battery",
-        "clock",
-        "tray",
-	"custom/notification",
-        "custom/power"
-    ],
-    "custom/uptime": {
-	"format": "up: {}",
-	"exec": "awk '{printf(\"%d:%02d:%02d\\n\",($1/60/60%24),($1/60%60),($1%60))}' /proc/uptime",
-	"interval": 1
-    },
-    "keyboard-state": {
-        "numlock": true,
-        "capslock": true,
-        "format": "{name} {icon}",
-        "format-icons": {
-            "locked": "",
-            "unlocked": ""
-        }
-    },
-    "tray": {
-        // "icon-size": 21,
-        "spacing": 10
-    },
-    "clock": {
-	"interval": 1,
-	"format": "{:%a %d-%m-%Y %H:%M:%S}",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-    },
-    "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
-    },
-    "memory": {
-        "format": "{}% "
-    },
-    "temperature": {
-        "critical-threshold": 70,
-        "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
-    },
-    "battery": {
-        "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{capacity}% {icon}",
-        "format-full": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
-        "format-icons": ["", "", "", "", ""]
-    },
-    "network": {
-        "format-wifi": "{signalStrength}% ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
-    },
-    "pulseaudio": {
-        "scroll-step": 1, // %, can be a float
-        "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
-        "format-source": "{volume}% ",
-        "format-source-muted": "",
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
-        },
-        "on-click": "pavucontrol"
-    },
-    "custom/power": {
-        "format" : "⏻ ",
-		"tooltip": false,
-		"menu": "on-click",
-		"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
-		"menu-actions": {
-			"shutdown": "shutdown",
-			"reboot": "reboot",
-			"suspend": "systemctl suspend",
-			"hibernate": "systemctl hibernate"
-		}
-    },
-    "hyprland/workspaces": {
-	"persistent-workspaces": {
-	    // "eDP-1": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ],
-	    // "DP-1": [ 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
-	}
-    },
-    "hyprland/window": {
-        "icon": true,
-	"format": "{title}",
-	"separate-outputs": true
-    },
-    "custom/notification": {
-        "tooltip": false,
-        "format": "{} {icon}",
-        "format-icons": {
-            "notification": "<span foreground='red'><sup></sup></span> ",
-            "none": "",
-            "dnd-notification": "<span foreground='red'><sup></sup></span> ",
-            "dnd-none": "",
-            "inhibited-notification": "<span foreground='red'><sup></sup></span> ",
-            "inhibited-none": "",
-            "dnd-inhibited-notification": "<span foreground='red'><sup></sup></span> ",
-            "dnd-inhibited-none": ""
-        },
-        "return-type": "json",
-        "exec-if": "which swaync-client",
-        "exec": "swaync-client -swb",
-        "on-click": "sleep 0.1 && swaync-client -t -sw",
-        "on-click-right": "swaync-client -d -sw",
-        "escape": true
-    }
-}
+	"layer": "top",
+	"position": "top",
+	"output": ["HDMI-A-1"],
+	"include": [
+		"~/.config/waybar/bar.jsonc",
+	],
+	"modules-left": [
+		"hyprland/workspaces"
+	],
+	"modules-center": [
+		"hyprland/window"
+	]
+}]
