--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -2,7 +2,7 @@
 [{
 	"layer": "top",
 	"position": "top",
-	"output": ["eDP-1"],
+	"output": "eDP-1",
 	"include": [
 		"~/.config/waybar/bar.jsonc",
 	],    
@@ -30,7 +30,7 @@
 {
 	"layer": "top",
 	"position": "top",
-	"output": ["HDMI-A-1"],
+	"output": "!eDP-1",
 	"include": [
 		"~/.config/waybar/bar.jsonc",
 	],
