--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -57,6 +57,8 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # not working for now :(
 # exec-once = hyprpm reload -n
 
+exec-once = /usr/bin/pypr
+
 exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark"   # for GTK3 apps
 exec = gsettings set org.gnome.desktop.interface color-scheme "Adwaita-dark"   # for GTK4 apps
 
@@ -66,7 +68,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 #exec-once = nm-applet &
 exec-once = waybar & wpaperd & swaync
 exec-once = jetbrains-toolbox --minimized
-exec-once = if [ "$(uname -n)" == "michal-82k2" ]; then slack & signal-desktop --use-tray-icon & brave & discord; fi
+exec-once = if [ "$(uname -n)" == "michal-82k2" ]; then signal-desktop --use-tray-icon & brave & firefox & kitty & discord; fi
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 #####################
@@ -248,11 +250,9 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-#ctrl delete
-bind = $mainMod, del, exec, "dbus-send --system --print-reply --dest=org.bluez /org/bluez/hci0/dev_94_45_60_80_0C_94 org.bluez.MediaControl1.Pause"
-
-#ctrl insert
-bind = $mainMod, ins, exec, "dbus-send --system --print-reply --dest=org.bluez /org/bluez/hci0/dev_94_45_60_80_0C_94 org.bluez.MediaControl1.Play"
+# Play pause headphones
+bind = CONTROL_R, DELETE, exec, dbus-send --system --print-reply --dest=org.bluez /org/bluez/hci0/dev_94_45_60_80_0C_94 org.bluez.MediaControl1.Pause
+bind = CONTROL_R, INSERT, exec, dbus-send --system --print-reply --dest=org.bluez /org/bluez/hci0/dev_94_45_60_80_0C_94 org.bluez.MediaControl1.Play
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -272,9 +272,16 @@ bind = , XF86AudioLowerVolume, exec, pamixer -d 5
 bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/volume --toggle-mic 
 bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume --toggle
 
-
 bind = $shiftMod, PRINT, exec, hyprshot -z -m region
 bind = , PRINT, exec, hyprshot -z -m output
+
+
+# Setup the key binding
+bind = $mainMod, B, exec, pypr fetch_client_menu
+
+# Add some style to the "exposed" workspace
+workspace = special:exposed,gapsout:60,gapsin:30,bordersize:5,border:true,shadow:false
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -290,4 +297,13 @@ bind = , PRINT, exec, hyprshot -z -m output
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
+workspace = 1, persistent:true, name:sig, monitor:eDP-1,
+workspace = 2, persistent:true, name:dscrd, monitor:eDP-1,
+workspace = 3, persistent:true, name:slack, monitor:eDP-1,
+workspace = 4, persistent:true, name:ff, monitor:HDMI-A-1,
+workspace = 5, persistent:true, name:ff2, monitor:eDP-1,
+workspace = 6, persistent:true, name:cli, monitor:eDP-1,
+workspace = 7, persistent:true, name:ps, monitor:HDMI-A-1,
+workspace = 8, persistent:true, name:pm, monitor:eDP-1,
+workspace = 9, persistent:true, name:vpn, monitor:eDP-1,
 
