--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -46,6 +46,7 @@ $menu = wofi --show drun
 env = XCURSOR_SIZE,16
 env = HYPRCURSOR_SIZE,16
 env = GTK_THEME,Adwaita-dark
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 
 #################
 ### AUTOSTART ###
@@ -59,17 +60,15 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 exec-once = /usr/bin/pypr
 
-exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark"   # for GTK3 apps
-exec = gsettings set org.gnome.desktop.interface color-scheme "Adwaita-dark"   # for GTK4 apps
-
-env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
+#exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark"   # for GTK3 apps
+#exec = gsettings set org.gnome.desktop.interface color-scheme "Adwaita-dark"   # for GTK4 apps
 
 #exec-once = $terminal
 #exec-once = nm-applet &
 exec-once = waybar & wpaperd & swaync
 exec-once = jetbrains-toolbox --minimized
 exec-once = if [ "$(uname -n)" == "michal-82k2" ]; then signal-desktop --use-tray-icon & brave & firefox & kitty & discord; fi
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 #####################
 ### LOOK AND FEEL ###
@@ -273,8 +272,8 @@ bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/volume --toggle-mic
 bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume --toggle
 
 bind = $shiftMod, PRINT, exec, hyprshot -z -m region
-bind = , PRINT, exec, hyprshot -z -m output
-
+bind = , PRINT, exec, hyprshot -z -m outpudate +%st
+bind = $mainMod, PRINT, exec, ~/.config/hypr/scripts/screen_record
 
 # Setup the key binding
 bind = $mainMod, B, exec, pypr fetch_client_menu
