--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -59,7 +59,7 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # exec-once = hyprpm reload -n
 
 exec-once = /usr/bin/pypr
-
+exec-once = swayosd-server
 #exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark"   # for GTK3 apps
 #exec = gsettings set org.gnome.desktop.interface color-scheme "Adwaita-dark"   # for GTK4 apps
 
@@ -258,18 +258,17 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Screen brightness
-bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
-bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
-#bind = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/backlight --inc 
-#bind = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/backlight --dec
+bind = , XF86MonBrightnessUp, exec, swayosd-client --brightness raise
+bind = , XF86MonBrightnessDown, exec, swayosd-client --brightness lower
 
 # Volume
-#bind = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume --inc 
-bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
-#bind = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume --dec 
-bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
-bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/volume --toggle-mic 
-bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume --toggle
+bind = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume 5
+bind = , XF86AudioLowerVolume, exec, swayosd-client --output-volume -5
+bind = , XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
+bind = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+
+bind = , CAPS_LOCK, exec, sleep 0.1; swayosd-client --caps-lock
+bind = , NUM_LOCK, exec, sleep 0.1; swayosd-client --num-lock
 
 bind = $shiftMod, PRINT, exec, hyprshot -z -m region
 bind = , PRINT, exec, hyprshot -z -m outpudate +%st
