--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -53,7 +53,8 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 #################
 
 # sudo in windowed apps :V
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+# exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # plugins reload
 # not working for now :(
 # exec-once = hyprpm reload -n
