--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,7 +23,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,0x0,1
-monitor=HDMI-A-1,1920x1080,-1920x0,1
+monitor=desc:Acer Technologies KA240Y TNGEE0013W01,1920x1080,-1920x0,1
 monitor=DP-1,preferred,0x-1080,1
 
 ###################
@@ -35,7 +35,8 @@ monitor=DP-1,preferred,0x-1080,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi --show drun
+#$menu = wofi --show drun
+$menu = rofi -show drun
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -207,10 +208,12 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+bind= SUPER, g, togglegroup,
+bind= SUPER, tab, changegroupactive,
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
