--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,6 +24,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,0x0,1
 monitor=desc:Acer Technologies KA240Y TNGEE0013W01,1920x1080,-1920x0,1
+monitor=desc:Samsung Electric Company C24F390 HTQJ405956,1920x1080,-1920x0,1
 monitor=DP-1,preferred,0x-1080,1
 
 ###################
