--- a/waybar/bar.jsonc
+++ b/waybar/bar.jsonc
@@ -79,16 +79,18 @@
         "on-click": "pavucontrol"
     },
     "custom/power": {
-        "format" : "⏻",
-		"tooltip": false,
-		"menu": "on-click",
-		"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
-		"menu-actions": {
-			"shutdown": "shutdown",
-			"reboot": "reboot",
-			"suspend": "systemctl suspend",
-			"hibernate": "systemctl hibernate"
-		}
+        "format": "⏻",
+	"tooltip": false,
+	"on-click": "wlogout"
+//		"tooltip": false,
+//		"menu": "on-click",
+//		"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
+//		"menu-actions": {
+//			"shutdown": "shutdown",
+//			"reboot": "reboot",
+//			"suspend": "systemctl suspend",
+//			"hibernate": "systemctl hibernate"
+//		}
     },
     "hyprland/workspaces": {
 	"persistent-workspaces": {
