--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -10,11 +10,10 @@
 		"cpu",
 		"memory",
 		"temperature",
-		"hyprland/workspaces",
 		"custom/uptime"
 	],
 	"modules-center": [
-		"hyprland/window"
+		"hyprland/workspaces"
 	],
 	"modules-right": [
         	"pulseaudio",
@@ -34,10 +33,10 @@
 		"~/.config/waybar/bar.jsonc"
 	],
 	"modules-left": [
-		"hyprland/workspaces"
+		"custom/uptime"
 	],
 	"modules-center": [
-		"hyprland/window"
+		"hyprland/workspaces"
 	],
 	"modules-right": [
 		"clock"
