--- a/hypr/envs.conf
+++ b/hypr/envs.conf
@@ -3,4 +3,4 @@ env = XCURSOR_SIZE,16
 env = HYPRCURSOR_SIZE,16
 env = GTK_THEME,Adwaita-dark
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
-
+env = GDK_SCALE,1
