--- a/hypr/general_config.conf
+++ b/hypr/general_config.conf
@@ -68,6 +68,11 @@ master {
     new_status = master
 }
 
+xwayland {
+  force_zero_scaling = false
+  use_nearest_neighbor = false
+}
+
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
