remove brave from autostart

--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -10,5 +10,5 @@ exec-once = swayosd-server
 
 exec-once = waybar & wpaperd & swaync
 #exec-once = jetbrains-toolbox --minimized
-exec-once = if [ "$(uname -n)" == "michal-82k2" ]; then signal-desktop --use-tray-icon & brave & firefox & kitty & discord; fi
+exec-once = if [ "$(uname -n)" == "michal-82k2" ]; then signal-desktop --use-tray-icon & firefox & kitty & discord; fi
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
