fix(hypr): config adjusted to 0.45

--- a/hypr/monitors.conf
+++ b/hypr/monitors.conf
@@ -2,3 +2,4 @@
 monitor=,preferred,0x0,1
 monitor=desc:Acer Technologies KA240Y TNGEE0013W01,1920x1080,-2305x0,0.833333
 monitor=desc:Samsung Electric Company C24F390 HTQJ405956,1920x1080,-2305x0,0.833333
+monitor=DP-2,1920x1080,-1920x0,1
