--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -37,7 +37,7 @@ bind = , CAPS_LOCK, exec, sleep 0.1; swayosd-client --caps-lock
 bind = , NUM_LOCK, exec, sleep 0.1; swayosd-client --num-lock
 
 bind = SHIFT, PRINT, exec, hyprshot -z -m region
-bind = ,PRINT, exec, hyprshot -z -m outpudate +%st
+bind = , PRINT, exec, hyprshot -z -m output -m active
 bind = SUPER, PRINT, exec, ~/.config/hypr/scripts/screen_record
 
 # Setup the key binding
