--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -1,6 +1,6 @@
 
 # sudo in windowed apps :V
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # plugins reload
 # not working for now :(
 # exec-once = hyprpm reload -n
@@ -10,5 +10,5 @@ exec-once = swayosd-server
 
 exec-once = waybar & wpaperd & swaync
 #exec-once = jetbrains-toolbox --minimized
-exec-once = if [ "$(uname -n)" == "michal-82k2" ]; then signal-desktop --use-tray-icon & firefox & kitty & discord; fi
+exec-once = if [ "$(uname -n)" == "michal-ipg3" ]; then signal-desktop --use-tray-icon & firefox & kitty & discord; fi
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
