feat(): hyprpanel etc

--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -6,9 +6,12 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # exec-once = hyprpm reload -n
 
 exec-once = /usr/bin/pypr
-exec-once = swayosd-server
+#exec-once = swayosd-server
 
-exec-once = waybar & wpaperd & swaync
+exec-once = wpaperd
+exec-once = hyprpanel
+
+#exec-once = waybar & wpaperd &  dunst #& #swaync
 #exec-once = jetbrains-toolbox --minimized
-exec-once = if [ "$(uname -n)" == "michal-ipg3" ]; then signal-desktop --use-tray-icon & firefox & kitty & discord; fi
+#exec-once = if [ "$(uname -n)" == "michal-ipg3" ]; then signal-desktop --use-tray-icon & firefox & kitty & discord; fi
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
