--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -3,6 +3,9 @@ bind = SUPER, Q, killactive,
 bind = SUPER, V, togglefloating,
 bind = SUPER, T, settiled
 bind = SUPER, SPACE, exec, rofi -show drun
+bind = ALT, TAB, exec, rofi -show window
+bind = SUPER, C, exec, rofi -show calc -no-history
+bind = SUPER, E, exec, rofi -show emoji
 
 bind = SUPER, L, exec, hyprlock
 
@@ -24,14 +27,28 @@ bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
 
 # Screen brightness
-bind = , XF86MonBrightnessUp, exec, swayosd-client --brightness raise
-bind = , XF86MonBrightnessDown, exec, swayosd-client --brightness lower
+bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
+bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+#bind = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/backlight --inc 
+#bind = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/backlight --dec
 
 # Volume
-bind = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume 5
-bind = , XF86AudioLowerVolume, exec, swayosd-client --output-volume -5
-bind = , XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
-bind = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+#bind = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume --inc 
+bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
+#bind = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume --dec 
+bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
+#bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/volume --toggle-mic 
+#bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume --toggle
+
+# Screen brightness
+#bind = , XF86MonBrightnessUp, exec, swayosd-client --brightness raise
+#bind = , XF86MonBrightnessDown, exec, swayosd-client --brightness lower
+
+# Volume
+#bind = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume 5
+#bind = , XF86AudioLowerVolume, exec, swayosd-client --output-volume -5
+#bind = , XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
+#bind = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 
 bind = , CAPS_LOCK, exec, sleep 0.1; swayosd-client --caps-lock
 bind = , NUM_LOCK, exec, sleep 0.1; swayosd-client --num-lock
