--- a/hypr/input.conf
+++ b/hypr/input.conf
@@ -31,3 +31,7 @@ gestures {
 #    name = epic-mouse-v1
 #    sensitivity = -0.5
 #}
+device {
+    name = syna8020:00-06cb:ce5c-touchpad
+    enabled = false
+}
