--- a/hypr/workspaces.conf
+++ b/hypr/workspaces.conf
@@ -4,14 +4,16 @@ workspace = special:exposed,gapsout:60,gapsin:30,bordersize:5,border:true,shadow
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
-workspace = 1, persistent:true, name:ff, monitor:HDMI-A-1,
-workspace = 2, persistent:true, name:ps, monitor:HDMI-A-1,
+#workspace = 1, persistent:true, name:ff, monitor:HDMI-A-1,
+#workspace = 2, persistent:true, name:ps, monitor:HDMI-A-1,
+#workspace = 1, persistent:true, name:ff, monitor:DP-2,
+#workspace = 2, persistent:true, name:ps, monitor:DP-2,
 
-workspace = 3, persistent:true, name:sig, monitor:eDP-1,
-workspace = 4, persistent:true, name:dscrd, monitor:eDP-1,
-workspace = 5, persistent:true, name:slack, monitor:eDP-1,
-workspace = 6, persistent:true, name:ff2, monitor:eDP-1,
-workspace = 7, persistent:true, name:cli, monitor:eDP-1,
-workspace = 8, persistent:true, name:pm, monitor:eDP-1,
-workspace = 9, persistent:true, name:vpn, monitor:eDP-1,
+#workspace = 3, persistent:true, name:sig, monitor:eDP-1,
+#workspace = 4, persistent:true, name:dscrd, monitor:eDP-1,
+#workspace = 5, persistent:true, name:slack, monitor:eDP-1,
+#workspace = 6, persistent:true, name:ff2, monitor:eDP-1,
+#workspace = 7, persistent:true, name:cli, monitor:eDP-1,
+#workspace = 8, persistent:true, name:pm, monitor:eDP-1,
+#workspace = 9, persistent:true, name:vpn, monitor:eDP-1,
 
