--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -6,6 +6,7 @@ bind = SUPER, SPACE, exec, rofi -show drun
 bind = ALT, TAB, exec, rofi -show window
 bind = SUPER, C, exec, rofi -show calc -no-history
 bind = SUPER, E, exec, rofi -show emoji
+bind = SUPER, R, exec, rofi -show run
 
 bind = SUPER, L, exec, hyprlock
 
