--- a/hypr/monitors.conf
+++ b/hypr/monitors.conf
@@ -1,9 +1,4 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,0x0,1
-#monitor=desc:Acer Technologies KA240Y TNGEE0013W01,1920x1080,auto-left,0.833333 # biuro
-#monitor=desc:Acer Technologies KB242HYL TM1EE0048511,1920x1080,auto-up,0.833333 # biuro 2
-monitor=DP-2,1920x1080,auto-left,0.833333 # biuro
-#monitor=desc:Samsung Electric Company C24F390 HTQJ405956,1920x1080,auto-left,0.833333 # dom
-#monitor=DP-2,1920x1080,-1920x0,1
-#monitor=desc:Acer Technologies KB242HYL TM1EE0048511,1920x1080,1920x0,0.833333 # biurko Gosi
-#monitor=HDMI-A-1,1920x1080,auto-up,1
+monitor=DP-2,1920x1080,auto-left,0.833333
+monitor=HDMI-A-1,1920x1080,auto-left,0.833333
