feat(): one bar monitors etc

--- a/hypr/envs.conf
+++ b/hypr/envs.conf
@@ -1,6 +1,8 @@
 
-env = XCURSOR_SIZE,16
-env = HYPRCURSOR_SIZE,16
+env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,phing-cursors-dark
+env = HYPRCURSOR_THEME,phing-cursors-dark
+env = HYPRCURSOR_SIZE,24
 env = GTK_THEME,Adwaita-dark
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 env = GDK_SCALE,1
