--- a/hypr/general_config.conf
+++ b/hypr/general_config.conf
@@ -81,3 +81,7 @@ misc {
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
+render {
+    expand_undersized_textures = false
+}
+
