--- a/hypr/monitors.conf
+++ b/hypr/monitors.conf
@@ -1,4 +1,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,0x0,1
-monitor=DP-2,1920x1080,auto-left,0.833333
-monitor=HDMI-A-1,1920x1080,auto-left,0.833333
+monitor=DP-1,1920x1080,auto-left,0.833333
+monitor=HDMI-A-1,preferred,auto-right,0.833333,transform,1
+#monitor=desc:Acer Technologies KB242HYL TM1EE0048511,1920x1080,auto-up,0.833333
+monitor=desc:Samsung Electric Company C24F390 HTQJ405956,preferred,auto-right,0.833333
